added file upload component

--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
         "uploadFileOption": "Upload file",
         "enterYourText": "Enter Your Text",
         "uploadFile": "Upload File (.txt)",
+        "processText": "Estimate",
         "textIsProcessing": "Text is processing... Please wait"
     },
     "header": {
