added enums on server side, updated alert component

--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -16,6 +16,7 @@
         }
     },
     "errors": {
-        "incorrectFileExtension": "You tried to upload a file with an unsupported extension. Please use .txt files"
+        "incorrectFileExtension": "You tried to upload a file with an unsupported extension. Please use .txt files",
+        "fileNotFound": "ERROR: File not found"
     }
 }
