--- a/client/src/assets/i18n/ru.json
+++ b/client/src/assets/i18n/ru.json
@@ -16,6 +16,7 @@
         }
     },
     "errors": {
-        "incorrectFileExtension": "Вы пытались загрузить файл с неподдерживаемым расширением. Пожалуйста используйте файлы формата .txt"
+        "incorrectFileExtension": "Вы пытались загрузить файл с неподдерживаемым расширением. Пожалуйста используйте файлы формата .txt",
+        "fileNotFound": "ОШИБКА: Файл не найден"
     }
 }
