moved mat-form-field to separate component, updated text processing request

--- a/client/src/assets/i18n/ru.json
+++ b/client/src/assets/i18n/ru.json
@@ -17,6 +17,7 @@
     },
     "errors": {
         "incorrectFileExtension": "Вы пытались загрузить файл с неподдерживаемым расширением. Пожалуйста используйте файлы формата .txt",
-        "fileNotFound": "ОШИБКА: Файл не найден"
+        "fileNotFound": "ОШИБКА: Файл не найден",
+        "textNotFound": "Текст не был найден. Пожалуйста введите текст и повторите попытку."
     }
 }
