--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -17,6 +17,7 @@
     },
     "errors": {
         "incorrectFileExtension": "You tried to upload a file with an unsupported extension. Please use .txt files",
-        "fileNotFound": "ERROR: File not found"
+        "fileNotFound": "ERROR: File not found",
+        "textNotFound": "Text not found. Please add some text and try again."
     }
 }
