added display of rating text in UI

--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -6,7 +6,8 @@
         "enterYourText": "Enter Your Text",
         "uploadFile": "Upload File (.txt)",
         "processText": "Estimate",
-        "textIsProcessing": "Text is processing... Please wait"
+        "textIsProcessing": "Text is processing... Please wait",
+        "tryAgain": "Try again"
     },
     "header": {
         "navigation": {
