--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -7,7 +7,8 @@
         "uploadFile": "Upload File (.txt)",
         "processText": "Estimate",
         "textIsProcessing": "Text is processing... Please wait",
-        "tryAgain": "Try again"
+        "tryAgain": "Try again",
+        "textAssessment": "Assessment of text perception"
     },
     "header": {
         "navigation": {
