--- a/client/src/assets/i18n/ru.json
+++ b/client/src/assets/i18n/ru.json
@@ -8,7 +8,7 @@
         "processText": "Оценить",
         "textIsProcessing": "Текст обрабатывается... Пожалуйста подождите",
         "tryAgain": "Повторить",
-        "textAssessment": "Оценка восприятия текста"
+        "textAssessment": "Рейтинг читабельности"
     },
     "header": {
         "navigation": {
@@ -20,6 +20,7 @@
     "errors": {
         "incorrectFileExtension": "Вы пытались загрузить файл с неподдерживаемым расширением. Пожалуйста используйте файлы формата .txt",
         "fileNotFound": "ОШИБКА: Файл не найден",
-        "textNotFound": "Текст не был найден. Пожалуйста введите текст и повторите попытку."
+        "textNotFound": "Текст не был найден. Пожалуйста введите текст и повторите попытку.",
+        "internalServerError": "Упс, что-то пошло не так. Попробуйте еще раз."
     }
 }
