--- a/client/src/assets/i18n/ru.json
+++ b/client/src/assets/i18n/ru.json
@@ -8,13 +8,21 @@
         "processText": "Оценить",
         "textIsProcessing": "Текст обрабатывается... Пожалуйста подождите",
         "tryAgain": "Повторить",
-        "textAssessment": "Рейтинг читабельности"
+        "textAssessment": "Общий рейтинг читабельности текста",
+        "textAssessmentDetails": "Подробная информация:",
+        "averageSentenceLength": "Среднее количество слов в предложении: {{value}}",
+        "averageWordLength": "среднее количество символов в слове: {{value}}",
+        "commonWordsPercent": "Процент наиболее употребительных слов в английском языке составляет {{value}}%",
+        "fleschReadingEaseScale": "Читаемость текста по шкале Флеша: {{value}}",
+        "textRepeatabilityPercent": "Повторяемость текста (процент одинаковых предложений, повторяющихся более одного раза) составляет - {{value}}%",
+        "perfectSentencesPercent": "Количество предложений в совершенном времени составляет {{value}}%",
+        "perfectContinuousSentencesPercent": "Количество предложений в совершенном непрерывном времени составляет {{value}}%"
     },
     "header": {
         "navigation": {
             "home": "Главная",
-            "about": "Инфо",
-            "contacts": "Связаться с нами"
+            "about": "О приложении",
+            "contacts": "Контакты"
         }
     },
     "errors": {
@@ -22,5 +30,9 @@
         "fileNotFound": "ОШИБКА: Файл не найден",
         "textNotFound": "Текст не был найден. Пожалуйста введите текст и повторите попытку.",
         "internalServerError": "Упс, что-то пошло не так. Попробуйте еще раз."
+    },
+    "about": {
+        "commonDescription": "<p>Text Complexity Assessment - это онлайн-инструмент для анализа английского текста, который позволяет легко определить уровень сложности и читаемости текста, как иностранного.</p> <p>Инструмент поддерживает два способа для ввода данных: через текстовое поле или посредством загрузки файла формата .txt.</p> <p>Как результат анализа, инструмент отображает общий рейтинг читаемости текста по шкале от 0 до 100. Кроме того  инструмент предоставляет дополнительную информацию по анализу текста, такую как: <ul><li>среднее количество слов в предложении</li> <li>среднее количество букв в слове</li> <li>процент встречаемости наиболее употребительных английских слов</li> <li>индекс удобочитаемости Флеша (<a href=\"https://ru.wikipedia.org/wiki/%D0%98%D0%BD%D0%B4%D0%B5%D0%BA%D1%81_%D1%83%D0%B4%D0%BE%D0%B1%D0%BE%D1%87%D0%B8%D1%82%D0%B0%D0%B5%D0%BC%D0%BE%D1%81%D1%82%D0%B8\">Узнать больше</a>)</li> <li>процент схожих предложений в тексте</li> <li>процент предложений в совершенном времени и совершенном непрерывном времени</li></ul></p><p>На основе полученной информации вы сможете понять основные критерии, которые усложняют понимание текста как иностранного.</p>",
+        "warning": "Предупреждение: инструмент работает только с английским языком. Попытка проанализировать любой другой язык приведет к неверному результату или ошибке."
     }
 }
