--- a/client/src/assets/i18n/ru.json
+++ b/client/src/assets/i18n/ru.json
@@ -34,5 +34,11 @@
     "about": {
         "commonDescription": "<p>Text Complexity Assessment - это онлайн-инструмент для анализа английского текста, который позволяет легко определить уровень сложности и читаемости текста, как иностранного.</p> <p>Инструмент поддерживает два способа для ввода данных: через текстовое поле или посредством загрузки файла формата .txt.</p> <p>Как результат анализа, инструмент отображает общий рейтинг читаемости текста по шкале от 0 до 100. Кроме того  инструмент предоставляет дополнительную информацию по анализу текста, такую как: <ul><li>среднее количество слов в предложении</li> <li>среднее количество букв в слове</li> <li>процент встречаемости наиболее употребительных английских слов</li> <li>индекс удобочитаемости Флеша (<a href=\"https://ru.wikipedia.org/wiki/%D0%98%D0%BD%D0%B4%D0%B5%D0%BA%D1%81_%D1%83%D0%B4%D0%BE%D0%B1%D0%BE%D1%87%D0%B8%D1%82%D0%B0%D0%B5%D0%BC%D0%BE%D1%81%D1%82%D0%B8\">Узнать больше</a>)</li> <li>процент схожих предложений в тексте</li> <li>процент предложений в совершенном времени и совершенном непрерывном времени</li></ul></p><p>На основе полученной информации вы сможете понять основные критерии, которые усложняют понимание текста как иностранного.</p>",
         "warning": "Предупреждение: инструмент работает только с английским языком. Попытка проанализировать любой другой язык приведет к неверному результату или ошибке."
+    },
+    "contacts": {
+        "contactUs": "Контакты",
+        "gmail": "Gmail",
+        "github": "GitHub",
+        "vk": "vk"
     }
 }
