added tips for user about level of English

--- a/client/src/assets/i18n/ru.json
+++ b/client/src/assets/i18n/ru.json
@@ -16,7 +16,12 @@
         "fleschReadingEaseScale": "Читаемость текста по шкале Флеша: {{value}}",
         "textRepeatabilityPercent": "Повторяемость текста (процент одинаковых предложений, повторяющихся более одного раза) составляет - {{value}}%",
         "perfectSentencesPercent": "Количество предложений в совершенном времени составляет {{value}}%",
-        "perfectContinuousSentencesPercent": "Количество предложений в совершенном непрерывном времени составляет {{value}}%"
+        "perfectContinuousSentencesPercent": "Количество предложений в совершенном непрерывном времени составляет {{value}}%",
+        "englishLevels": {
+            "elementary": "Текст рекомендуется для людей с начальным уровнем английского (A1-A2)",
+            "intermediate": "Текст рекомендуется для людей со средним уровнем английского (B1-B2)",
+            "fluent": "Текст рекомендуется для людей, свободно владеющих английским языком (C1-C2)"
+        }
     },
     "header": {
         "navigation": {
